fix content overflow

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -28,6 +28,8 @@ html {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #fefefe;
     font-family: 'Quicksand', Arial, sans-serif;
+    margin: 0;
+    padding: 0;
     font-size: 1.2rem;
 }
 
@@ -47,7 +49,6 @@ a:visited {
 
 .root-wrapper {
     max-width: 40rem;
-    width: 100%; 
     margin: 0 auto;
     padding-inline-start: 24px;
     padding-inline-end: 24px;
